Issue 160: add copy method Issue 161: fixed value clamping and made newInstance tests more comprehensive
git-svn-id: https://jaitools.googlecode.com/svn/trunk@1655 07dc4d45-bd82-665a-fa80-c0abab6b2a50